# dnject

./: .gitignore  Cargo.toml  build.rs  macos.sh  shell-wcc.nix  shell.nix
.cargo/: config.toml  macos_cs_runner.sh
injector/: Cargo.toml  build.rs
injector/.cargo/: config.toml
injector/src/: error.rs  lib.rs  main.rs
injector/src/macos/: bootstrap.rs  mach_stubs.rs  mod.rs  task_port.rs
injector/src/nt/: mod.rs
injector/src/wine/: linux.rs  macos.rs
injector/testbin/: Cargo.toml
injector/testbin/src/: common.rs  main.rs
injector/testlib/: Cargo.toml
injector/testlib/src/: lib.rs
injector/tests/: macos.rs  macos_common.rs  macos_hardened.rs  macos_tests.rs  macos_unsigned.rs
mach_util/: Cargo.toml
mach_util/src/: error.rs  lib.rs  mach_portal.rs  mapinfo.rs  stubs.rs
macos_portfetch/: Cargo.toml
macos_portfetch/macos_portfetch_internal/: Cargo.toml
macos_portfetch/macos_portfetch_internal/src/: lib.rs  main.rs
macos_portfetch/src/: lib.rs
src/: main.rs  main.slint  term_spawn.rs  text_edit_logger.rs  ui.rs  wine.rs
ui/: main.ui
wine_util/: Cargo.toml
wine_util/src/: lib.rs  linux.rs  macos.rs
