[package]
name = "dnject"
version = "0.1.0"
edition = "2021"
publish = false
description = "The DNSense GUI injector, cross platform and wine-enabled"

[workspace]
members = ["injector", "injector/testlib", "mach_util", "macos_portfetch", "macos_portfetch/macos_portfetch_internal"]

[features]
macos-ent-bypass = [ "macos_portfetch/exploit-CVE-2022-42855" ]  # No-op on non-darwin

[dependencies]
cpp_core = "0.6"
log = "0.4"
libc = "0.2"
qt_core = "0.5"
qt_gui = "0.5"
qt_widgets = "0.5"
qt_ui_tools = "0.5"
qt_core_custom_events = "0.2"
sysinfo = "0.29"
injector = { path = "injector" }

[target.'cfg(target_os = "macos")'.dependencies]
nix = "0.26"
mach_util = { path = "mach_util" }
macos_portfetch = { path = "macos_portfetch" }

[build-dependencies]
qt_ritual_build = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

# see injector/src/macos/bootstrap.rs:8
[profile.dev.package.injector]
opt-level = 2
debug-assertions = false

# Needed for non-x86_64 darwin targets
[patch.crates-io]
ring = { git = "https://github.com/melvyn2/ring.git" }

[package.metadata.bundle]
identifier = "pub.dnsense.dnject"
copyright = "© Copyright 2001 $wag$oft Industries DnbH"
category = "Development"
osx_minimum_system_version = "10.13"
