[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "injector"
path = "src/main.rs"
required-features = ["env_logger"]

[features]
# Until https://github.com/rust-lang/rfcs/pull/3374, leave env_logger as default dep and let consumers remove if desired
default = ["env_logger"]
test_broken = [ "spawn-task-port" ]  # Used to test broken methods

[dependencies]
env_logger = { version = "0.10", optional = true }
libc = "0.2"
log = "0.4"
sysinfo = { version = "0.30", default-features = false }

[dev-dependencies]
testlib = { path = "./testlib", artifact = ["cdylib"] }
testbin = { path = "./testbin", artifact = ["bin"], lib = true }

[target.'cfg(target_os = "macos")'.dependencies]
spawn-task-port = { git = "https://github.com/melvyn2/spawn-task-port.git", optional = true }
mach2 = "0.4"
mach_util = { path = "../mach_util" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
# This crate is so comically bloated that it brings our dependency tree (cargo-tree) from 44 lines to 904!!!!!!!!! WTF!!
# Thankfully we don't need it except for tests
# TODO check if custom source still required
apple-codesign = { git = "https://github.com/melvyn2/apple-platform-rs.git", default-features = false }
macos_portfetch = { path = "../macos_portfetch" }

[target.'cfg(target_os = "windows")'.dependencies]
dll-syringe = "0.15"
