[package]
name = "macos_portfetch"
version = "0.1.0"
edition = "2021"

[features]
default = []
exploit-CVE-2022-42855 = []

[dependencies]
log = "0.4"
libc = "0.2"
nix = "0.26"
timeout-readwrite = "0.3"
bincode = "2.0.0-rc.3"
mach2 = "0.4"
security-framework-sys = "2.8"
sysinfo = "0.29"
apple-codesign = { git = "https://github.com/melvyn2/apple-platform-rs.git", default-features = false }

mach_util = { path = "../mach_util" }
macos_portfetch_internal = { path = "macos_portfetch_internal", artifact = ["bin"], lib = true }